--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,53 +1,134 @@
-<!-- views/home.handlebars -->
-{{#if user}}
-<div class="jumbotron">
-  <p>Please make a selection.</p>
-</div>
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Sequelize Init</h3>
+<<!-- views/home.handlebars -->
+  {{#if user}}
+
+
+  <br>
+  <br>
+  <br>
+
+  <div class="container">
+    <div id="start-card" class="card-panel">
+      <div class="row">
+        <div class="col s12">
+          <p class="form-q center grey-text text-darken-3">Would you like to Sequelize Init your project or have more customizable features?</p>
+        </div>
+
+        <div class="col s12">
+          <form>
+            <div class="container">
+              <div class="col m6">
+                <p class="center">
+                  <input class="with-gap" value="seq-init" name="group1" type="radio" id="seq-init-radio" />
+                  <label for="seq-init-radio">Sequelize init</label>
+                </p>
+              </div>
+              <div class="col m6">
+                <p class="center">
+                  <input class="with-gap" value="customize" name="group1" type="radio" id="customize-radio" />
+                  <label for="customize-radio">Customize</label>
+                </p>
+              </div>
+
+              <br>
+              <br>
+              <br>
+              <br>
+
+              <div class="col m12 center">
+                <button type="button" class="btn next-btn waves-effect waves-light deep-purple" name="action">Next
+                  <i class="material-icons right">send</i>
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div id="init-card" class="card-panel hide">
+      <div class="row">
+        <div class="col s12">
+          <p class="form-q center">What would you like to initialize?</p>
+        </div>
+
+        <div class="col s12">
+          <form>
+            <div class="container">
+              <div class="col s6 offset-s3">
+                <p>
+                  <input class="colored" type="checkbox" id="check1" />
+                  <label for="check1">Init Config</label>
+                </p>
+              </div>
+              <div class="col s6 offset-s3">
+                <p>
+                  <input class="colored" type="checkbox" id="check3" />
+                  <label for="check3">Init Migration</label>
+                </p>
+              </div>
+              <div class="col s6 offset-s3">
+                <p>
+                  <input class="colored" type="checkbox" id="check2" />
+                  <label for="check2">Init Models</label>
+                </p>
+              </div>
+              <div class="col s6 offset-s3">
+                <p>
+                  <input class="colored" type="checkbox" id="check4" />
+                  <label for="check4">Init Seeders</label>
+                </p>
+              </div>
+
+
+              <div class="col m12 center">
+                <br>
+                <br>
+
+                <button id="btnSeq" type="button" class="btn deep-purple white-text waves-effect waves-light" name="action">Next
+                  <i class="material-icons right">send</i>
+                </button>
+              </div>
+
+
+            </div>
+
+
+
+          </form>
+
+
+        </div>
+      </div>
+
+
+
+    </div>
   </div>
-  <div class="panel-body">
-    <form id="initialize">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="config-check" id="config-check">
-        <label class="form-check-label" for="config-check">
-          Config
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="migrations-check" id="migrations-check">
-        <label class="form-check-label" for="migrations-check">
-          Models
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="models-check" id="models-check">
-        <label class="form-check-label" for="models-check">
-          Migration
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="seeders-check" id="seeders-check">
-        <label class="form-check-label" for="seeders-check">
-          Seeders
-        </label>
-      </div>
-      <button id="btnSeq" type="submit" class="btn btn-primary">Create</button>
-    </form>
+
+  {{else}}
+
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <div class="container">
+    <div id="sign-in-card" class="card-panel showing deep-purple">
+
+      <p style="font-size: 22px" class="center deep-purple-text text-accent-1">Welcome to Skelly! The MVC folder stucture automater</p>
+
+      <br>
+
+      <p class="center">
+        <a href="/signin">
+          <button type="button" class="btn white deep-purple-text">Get Started
+            <i class="material-icons right">send
+            </i>
+          </button>
+        </a>
+      </p>
+    </div>
   </div>
-</div>
 
-{{else}}
-<div class="jumbotron">
 
-  <p>Sign in and view your profile!</p>
-  <p>
-    <a href="/signin" class="btn btn-primary btn-lg" role="button">
-      <span class="glyphicon glyphicon-user"></span>
-      Sign in!
-    </a>
-  </p>
-</div>
-
-{{/if}}
+  {{/if}}
