--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<<!-- views/home.handlebars -->
+<!-- views/home.handlebars -->
   {{#if user}}
 
 
@@ -115,7 +115,7 @@
   <div class="container">
     <div id="sign-in-card" class="card-panel showing deep-purple">
 
-      <p style="font-size: 22px" class="center deep-purple-text text-accent-1">Welcome to Skelly! The MVC folder stucture automater</p>
+      <p style="font-size: 22px" class="center deep-purple-text text-accent-1">Welcome to SequelUP! The MVC folder stucture automater</p>
 
       <br>
 
